--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/epilogue": "^5.1.1",
     "@supabase/supabase-js": "^2.49.4",
+    "firebase": "^11.8.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
